ingress.yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/subnets: subnet-0cfdd4c4b5e1c907f, subnet-0c7bcadc551287a2a
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:551940803425:certificate/42ff0d2e-d36d-4370-b748-6a0c68ba4031
    alb.ingress.kubernetes.io/lister-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    - http:
        paths:
          - path: /appa.html
            pathType: Prefix
            backend:
              service:
                name: appa-service-nodeport
                port:
                  number: 80
          - path: /appb.html
            pathType: Prefix
            backend:
              service:
                name: appb-service-nodeport
                port:
                  number: 80
